# novavm

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  lib.go  lib_test.go
compiler/: Cargo.toml
compiler/src/: clean.rs  compiler.rs  lib.rs  mock.rs  new.rs
compiler/src/tests/: compiler_tests.rs
compiler/testdata/coverage/: .coverage_map.mvcov  .trace
compiler/testdata/general/: .trace  Move.toml
compiler/testdata/prove/: Prover.toml
compiler/testdata/prove/sources/: BasicCoin.move
crates/compiler/: Cargo.toml
crates/compiler/src/: clean.rs  command.rs  compiler.rs  extensions.rs  lib.rs  mock_chain.rs  mocks.rs  new.rs
crates/compiler/src/tests/: compiler_tests.rs
crates/gas/: Cargo.toml
crates/gas/src/: algebra.rs  algebra_ext.rs  instr.rs  lib.rs  meter.rs  misc.rs  move_stdlib.rs  natives.rs  nova.rs  params.rs  table.rs  transaction.rs
crates/gas/src/gas_params/: account.rs  block.rs  code.rs  event.rs  mod.rs  table.rs  type_info.rs  unit_test.rs  util.rs
crates/move-deps/: Cargo.toml
crates/move-deps/src/: lib.rs
crates/natives/: Cargo.toml
crates/natives/src/: account.rs  block.rs  code.rs  event.rs  lib.rs  number.rs  table.rs  type_info.rs  unit_test.rs  util.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: lib.rs
crates/stdlib/src/move_nursery/: Move.toml
crates/stdlib/src/move_stdlib/sources/: unit_test.move
crates/stdlib/src/nova_stdlib/sources/: account.spec.move  block.move  staking.move  table.move  table_with_length.move
crates/storage/: Cargo.toml
crates/storage/src/: data_view_resolver.rs  lib.rs  state_view.rs  state_view_impl.rs  table_view.rs  table_view_impl.rs
crates/storage/src/size/: mod.rs  size_resolver.rs
crates/storage/src/table_meta/: mod.rs  table_meta_resolver.rs
crates/types/: Cargo.toml
crates/types/src/: access_path.rs  entry_function.rs  lib.rs  message.rs  module.rs  script.rs  size_change_set.rs  size_delta.rs  table.rs  table_meta.rs  table_meta_change_set.rs  write_set.rs
crates/types/src/errors/: backend_error.rs  mod.rs  vm_error.rs
crates/vm/: Cargo.toml
crates/vm/src/: args_validator.rs  arguments.rs  backend.rs  lib.rs  nova_vm.rs  session.rs
crates/vm/src/errors/: vm_error.rs
crates/vm/src/message/: mod.rs
crates/vm/src/serde_helper/: mod.rs
crates/vm/src/storage/: data_view_resolver.rs  mod.rs
crates/vm/src/storage/size/: mod.rs  size_delta.rs  size_resolver.rs
crates/vm/src/storage/table_meta/: mod.rs  table_meta_change_set.rs  table_meta_resolver.rs
crates/vm/src/test_utils/: account.rs  entry_function.rs  mock_chain.rs  mock_tx.rs  mod.rs  module.rs  script.rs
crates/vm/src/tests/: mod.rs  move_unit_tests.rs  table_tests.rs  tx_simple_tests.rs  tx_std_coin_tests.rs  vm_error_tests.rs
libkernelproc/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
libkernelproc/src/: api.rs  api.rss  db.rs  event.rs  gas_meter.rs  interface.rs  iterator.rs  lib.rs  memory.rs  querier.rs  result.rs  storage.rs  version.rs  view.rs  vm.rs
libkernelproc/src/error/: go.rs  rust.rs
libkernelproc/src/tests/: error_tests.rs  mod.rs  version_tests.rs
libkernelvm/: Cargo.toml  build.rs
libkernelvm/src/: lib.rs  memory.rs  version.rs
libnovaproc/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
libnovaproc/src/: api.rs  args.rs  compiler.rs  db.rs  event.rs  interface.rs  iterator.rs  lib.rs  memory.rs  querier.rs  result.rs  size_delta.rs  storage.rs  table_storage.rs  version.rs  vm.rs
libnovaproc/src/error/: go.rs  mod.rs  rust.rs
libnovaproc/src/move_api/: address.rs  bytecode.rs  compiler.rs  convert.rs  handler.rs  mod.rs  move_types.rs  table.rs  wrappers.rs
libnovaproc/src/tests/: error_tests.rs  memory_tests.rs  mod.rs
libnovaproc/src/tests/move-test/: Move.toml
move-deps/: Cargo.toml
vm/: .gitignore  Cargo.toml
vm/move-test/: .coverage_map.mvcov  Makefile  Move.toml
vm/move-test/sources/: BasicCoin.move  NativeCoinTest.move  StdCoin.move  TableTestData.move  TableUnitTests.move  debug_test.move  script.move  test1.move  test2.move
vm/src/: access_path.rs  args_validator.rs  asset.rs  backend.rs  kernel_vm.rs  lib.rs  main.rs  nova_vm.rs  session.rs  table.rs  table_meta.rs  table_owner.rs
vm/src/api/: mod.rs
vm/src/errors/: backend_error.rs  mod.rs  vm_error.rs
vm/src/framework/move-stdlib/nursery/: Move.toml
vm/src/gas/: algebra.rs  gas_meter.rs  instr.rs  kernel_stdlib.rs  misc.rs  mod.rs  move_stdlib.rs  natives.rs  nova_natives.rs  nova_stdlib.rs  params.rs  transaction.rs
vm/src/kernel_stdlib/: Move.toml  bank.rs  mod.rs
vm/src/kernel_stdlib/sources/: bank.move
vm/src/message/: mod.rs  module.rs  size_change_set.rs
vm/src/move_modules/: mod.rs
vm/src/move_modules/nova_stdlib/: Move.toml
vm/src/move_modules/nova_stdlib/sources/: account.move  coin.move  comparator.move  simple_map.move  table.move  table.spec.move  table_with_length.move  (+1 more)
vm/src/natives/: account.rs  address.rs  block.rs  code.rs  mod.rs  signature.rs  table.rs  type_info.rs  util.rs
vm/src/natives/sources/: address.move
vm/src/nova_natives/: code.rs  mod.rs  signature.rs  type_info.rs  util.rs
vm/src/nova_stdlib/: Move.toml  bank.rs  code.rs  helpers.rs  mod.rs  signature.rs  type_info.rs  util.rs
vm/src/nova_stdlib/sources/: account.move  bank.move  block.move  code.spec.move  coin.move  nft.move  signature.move  type_info.move  util.move
vm/src/storage/: data_view_resolver.rs  state_view.rs
vm/src/table_meta/: data_cache.rs  effects.rs  find_address_visitor.rs  mod.rs
vm/src/tests/: mock_chain.rs  mock_tx.rs  mod.rs  move_unit_tests.rs  simple_transaction_tests.rs  table_tests.rs  tx_simple_tests.rs  tx_std_coin_tests.rs  vm_error_tests.rs
vm/src/types/: mod.rs  state_key.rs  write_set.rs
vm/src/vm/: access_path.rs  args_validator.rs  asset.rs  backend.rs  gas_meter.rs  kernel_vm.rs  mod.rs
vm/src/vm/message/: mod.rs  module.rs  script.rs  write_set.rs
vm/src/vm/natives/: Move.toml  address.rs  mod.rs
vm/src/vm/storage/: data_view_resolver.rs  mod.rs  state_view.rs
vm/src/vm/transaction/: mod.rs  script.rs
(+43 files in other folders)
