[workspace]
resolver = "2"

members = [
    "libnovaproc",
    "crates/compiler",
    "crates/gas",
    "crates/move-deps",
    "crates/natives",
    "crates/stdlib",
    "crates/vm"
]

[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
opt-level = 3
debug = 0 # for saving disk space during linking
incremental = false
codegen-units = 16

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Yun Yeo<yun@kernellabs.co>", "Geoff Lee <geoff@kernellabs.co>", "Jeff Woo <jeff@kernellabs.co>", "Harvey Han <harvey@kernellabs.co>"]
homepage = "https://www.kernellabs.co"
repository = "https://github.com/Kernel-Labs/novavm/"
