[package]
name = "nova-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.2", features = ["derive"] }
move-deps = { version = "0.0.1", path = "../move-deps", features = ["address20", "testing"] }
novavm = { version = "0.1.0", path = "../vm", features = ["backtraces"] }

[dev-dependencies]
serial_test = "0.9.0"
tempdir = "0.3.7"
