[package]
name = "kernelvm"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Kernel VM Engine"
homepage = "https://www.kernellabs.co"
repository = "https://github.com/Kernel-Labs/kernelvm"
license = "Apache-2.0"
authors = ["Geoff Lee <geoff@kernellabs.co>", "Jeff Woo <jeff@kernellabs.co>", "Harvey Han <harvey@kernellabs.co>"]
exclude = [".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[dev-dependencies]

[build-dependencies]
cbindgen = "0.24.3"
