[package]
name = "novaproc"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "Nova VM Engine"
homepage = "https://www.kernellabs.co"
repository = "https://github.com/Kernel-Labs/novavm"
license = "Apache-2.0"
authors = ["Yun Yeo<yun@kernellabs.co>", "Geoff Lee <geoff@kernellabs.co>", "Jeff Woo <jeff@kernellabs.co>", "Harvey Han <harvey@kernellabs.co>"]
exclude = [".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.64"
bcs = "0.1.3"
errno = "0.2.8"
hex = "0.4.3"
once_cell = "1.14.0"
pool = "0.1.4"
serde = { version = "1.0.144", features = ["alloc", "derive", "serde_derive"] }
serde_bytes = "0.11.7"
serde_json = "1.0.85"
thiserror = "1.0.34"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
nova-compiler = { version = "0.1.0", path = "../crates/compiler" }
novavm = { path = "../crates/vm", features = ["backtraces"] }
nova-natives = { path = "../crates/natives" }
nova-types = { path = "../crates/types" }
nova-gas = { path = "../crates/gas" }
nova-storage = { path = "../crates/storage" }
move-deps = { path = "../crates/move-deps", features = ["address20"] }

[dev-dependencies]

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

