[package]
name = "kernelvm"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "VM bindings to run kernel-move contracts"
homepage = "https://www.kernellabs.co"
repository = "https://github.com/Kernel-Labs/kernelvm/tree/main/vm"
license = "Apache-2.0"
authors = ["Geoff Lee <geoff@kernellabs.co>", "Jeff Woo <jeff@kernellabs.co>", "Harvey Han <harvey@kernellabs.co>"]
exclude = [".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-binary-format = { git = "https://github.com/move-language/move", rev = "70b34a66473c34ad30d101290b249f2db3c847a2" }
move-core-types = { git = "https://github.com/move-language/move", rev = "70b34a66473c34ad30d101290b249f2db3c847a2" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "70b34a66473c34ad30d101290b249f2db3c847a2" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "70b34a66473c34ad30d101290b249f2db3c847a2" }
serde = {version = "1.0.130", default-features = false}
serde_bytes = "0.11.5"
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
anyhow = "1.0.41"
once_cell = "1.7.2"
hex = {version = "0.4.3", default-features = false}

log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
num_enum = "0.5.7"