[package]
name = "kernelvm"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
description = "VM bindings to run kernel-move contracts"
homepage = "https://www.kernellabs.co"
repository = "https://github.com/Kernel-Labs/kernelvm/tree/main/vm"
license = "Apache-2.0"
authors = ["Geoff Lee <geoff@kernellabs.co>", "Jeff Woo <jeff@kernellabs.co>", "Harvey Han <harvey@kernellabs.co>"]
exclude = [".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
backtraces = []
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]


[dependencies]
move-deps = { path = "../move-deps", features = ["address20"] }

serde = { version = "1.0.130", default-features = false, features = ["derive", "alloc"] }
serde_bytes = "0.11.5"
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
anyhow = "1.0.41"
once_cell = "1.7.2"
hex = {version = "0.4.3", default-features = false}

log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
num_enum = "0.5.7"
thiserror = "1.0.34"
bcs = "0.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
smallvec = "1.6.1"

bytes = "1.1.0"
more-asserts = "0.3.0"
rand = "0.7.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = { version = "1.0.92", features = ["derive"] }



[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
