[package]
name = "nova-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bcs = "0.1.4"
once_cell = "1.7.2"
novavm = { version = "0.1.0", path = "../vm", features = ["backtraces", "testing"] }
nova-natives = { path = "../natives" }
nova-gas = { path = "../gas" }
move-deps = { version = "0.0.1", path = "../move-deps", features = ["address20", "testing"] }

[dev-dependencies]
serial_test = "0.9.0"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
