[package]
name = "nova-compiler"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bcs = "0.1.4"
nova-natives = { path = "../natives", features = ["testing"] }
nova-types = { path = "../types" }
nova-gas = { path = "../gas" }
move-deps = { version = "0.0.1", path = "../move-deps", features = ["address20", "testing"] }
dialoguer = "0.10.2"
clap = { version = "3.1.8", features = ["derive"] }
tsu = "1.0.1"

[dev-dependencies]
serial_test = "0.9.0"
