[package]
name = "nova-gas"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/gas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = "0.1.3"
move-deps = { version = "0.0.1", path = "../move-deps", features = ["address20"] }
nova-natives = { path = "../natives" }
nova-types = { path = "../types" }
