[package]
name = "move-deps"
version = "0.0.1"
publish = false
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/move-deps"

# This package is a copy from aptos-core/aptos-move/move-deps
# CHANGES
# - set package.edition to 2021
# - set address20 features. (address length for secp256k1 is 20. see: https://docs.cosmos.network/master/basics/accounts.html)

[dependencies]
##########################################################################################
# !!!!! WARNING !!!!!
#
#   To update the Move dependencies, you MUST perform a search and replace throughout
#   the whole repo. This is because we now have crates that directly depends on some Move
#   crates, to dodge feature unification issues. Please DO NOT make them use move-deps,
#   or you risk including testing only features in the production build.
#
#   The language team is aware of the poor user experience this created, and we are
#   actively looking for solutions.
#
##########################################################################################
move-abigen = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-cli = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-compiler = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-core-types = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-docgen = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-errmapgen = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-ir-compiler = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-model = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-package = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-prover = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-symbol-pool = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
read-write-set = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "d0b65a82fcc32e657f9e944ef0e8668abec95dd0" }

[features]
default = []
address20 = ["move-core-types/address20"]
fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing"]
testing = ["move-stdlib/testing", "move-vm-runtime/testing"]
failpoints = ["move-vm-runtime/failpoints"]
