[package]
name = "nova-natives"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/natives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
better_any = "0.1.1"
serde = { version = "1.0.130", default-features = false, features = ["derive", "alloc"] }
serde_bytes = "0.11.5"
smallvec = "1.6.1"
move-deps = { version = "0.0.1", path = "../move-deps", features = ["address20", "testing"] }
sha3 = "0.9.1"


[dev-dependencies]
serial_test = "0.9.0"
