[package]
name = "nova-stdlib"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/stdlib"

[dependencies]
move-deps = { path = "../move-deps", features = ["address20"] }
tempfile = "3.2.0"

[dev-dependencies]
serial_test = "0.9.0"

[features]
default = []
testing = ["move-deps/testing"]
