[package]
name = "nova-storage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/storage"

[dependencies]
nova-types = { path = "../types" }
nova-natives = { path = "../natives" }
move-deps = { path = "../move-deps", features = ["address20"] }
anyhow = "1.0.41"
thiserror = "1.0.34"

[dev-dependencies]
