[package]
name = "nova-types"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Kernel-Labs/novavm/tree/main/crates/types"

[dependencies]
move-deps = { path = "../move-deps", features = ["address20"] }
anyhow = "1.0.41"
bcs = "0.1.3"
num_enum = "0.5.7"
serde = { version = "1.0.130", default-features = false, features = ["derive", "alloc"] }
serde_bytes = "0.11.5"
hex = {version = "0.4.3", default-features = false}
thiserror = "1.0.34"

[build-dependencies]
serde-generate = "0.24.0"
serde-reflection = "0.3.6"
move-deps = { path = "../move-deps", features = ["address20"] }
serde = { version = "1.0.130", features = ["derive", "alloc"] }
serde_bytes = "0.11.7"
hex = {version = "0.4.3", default-features = false}
anyhow = "1.0.41"